--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -3,17 +3,130 @@
         <title>Lawbreaker: A Knave character generator</title>
         <link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="static/css/skeleton.css" />
+
+        <link rel="stylesheet" type="text/css" href="static/css/font.css" />
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     </head>
     <body style="font-family: 'Crimson Text', serif !important;">
         <div class="container">
+            <!-- Title -->
             <div class="row">
-                <div class="one columns"></div>
-                <div class="ten columns" style="white-space:pre;font-size: 0.75em;">
-                    <pre>{{content}}</pre>
-                </div>
-                <div class="one columns"></div>
+                <div class="two columns">&nbsp;</div>
+                <div class="four columns" style="font-family:'Sebaldus-Gotisch';font-size:3em;">Lawbreaker</div>
+                <div class="four columns"><b>A character generator for the Knave RPG by Questing Beast</b></div>
+                <div class="two columns">&nbsp;</div>
             </div>
+            <br>
+            <!-- Basic details -->
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="eight columns"><b>Name:</b> {{content['name']}}</div>
+                <div class="two columns">&nbsp;</div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="two columns"><b>XP:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['xp']}}</div>
+                <div class="two columns" style="text-align:center;"><b>Level:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['level']}}</div>
+                <div class="two columns"><b>HP:&nbsp;&nbsp;&nbsp;&nbsp;</b> {{content['hit_points']}}</div>
+                <div class="four columns">&nbsp;</div>
+            </div>
+            <br>
+            <!-- Traits -->
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Traits</div>
+                <div class="two columns">&nbsp;</div>
+            </div>
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="eight columns">
+                    Has a {{content['traits']['physique']}} physique, a {{content['traits']['face']}} face, {{content['traits']['skin']}} skin and {{content['traits']['hair']}} hair.
+                    Clothes are {{content['traits']['clothing']}}, and speech {{content['traits']['speech']}}.
+                    Is {{content['traits']['virtue']}}, but {{content['traits']['vice']}}.
+                    Has been a {{content['traits']['background']}} in the past. Has been {{content['traits']['misfortune']}} in the past.
+                    Favours {{content['traits']['alignment']}}.
+                </div>
+                <div class="two columns">&nbsp;</div>
+            </div>
+            <!-- Attributes -->
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Attributes</div>
+                <div class="two columns">&nbsp;</div>
+            </div>
+            <div class="row">
+                <div class="three columns">&nbsp;</div>
+                <div class="two columns" style="text-align:center;"><b>Defense</b></div>
+                <div class="two columns" style="text-align:center;"><b>Attribute</b></div>
+                <div class="two columns" style="text-align:center;"><b>Bonus</b></div>
+                <div class="three columns">&nbsp;</div>
+            </div>
+            % for (attribute, attribute_defense) in content["attributes"].iteritems():
+            <div class="row">
+                <div class="three columns">&nbsp;</div>
+                <div class="two columns" style="text-align:center;">{{attribute_defense}}</div>
+                <div class="two columns" style="text-align:center;">{{attribute}}</div>
+                <div class="two columns" style="text-align:center;">{{attribute_defense - 10}}</div>
+                <div class="three columns">&nbsp;</div>
+            </div>
+            % end
+            <br>
+            <div class="row">
+                <div class="three columns">&nbsp;</div>
+                <div class="two columns" style="text-align:center;">{{content['armor_defense']}}</div>
+                <div class="two columns" style="text-align:center;">Armor</div>
+                <div class="two columns" style="text-align:center;">{{content['armor_defense'] - 10}}</div>
+                <div class="three columns">&nbsp;</div>
+            </div>
+            <!-- Inventory -->
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Inventory</div>
+                <div class="two columns">&nbsp;</div>
+            </div>
+            <div class="row">
+                <div class="three columns">&nbsp;</div>
+                <div class="five columns"><b>Name</b></div>
+                <div class="one columns" style="text-align:center;"><b>Slots</b></div>
+                <div class="three columns">&nbsp;</div>
+            </div>
+            % for item in content["inventory"]:
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="six columns">
+                    % if item['equipped']:
+                    (E)
+                    % end
+                    {{item['name']}}
+                    <i style="font-size:0.7em;">
+                    % if item['type']=='Weapon':
+                    <!--d6 damage, 1 hand, 3 quality-->
+                    ({{item['damage']}} damage, {{item['hands']}} hand(s), {{item['quality']}} quality)
+                    % end
+
+                    % if item['type']=='Armor' and item['name'] in ['Shield', 'Helmet']:
+                    (Defense +{{item['defense']}}, {{item['quality']}} quality)
+                    % end
+
+                    % if item['type']=='Armor' and item['name'] not in ['Shield', 'Helmet']:
+                    (Defense {{10 + item['defense']}}, {{item['quality']}} quality)
+                    % end
+                </i>
+
+
+                </div>
+                <div class="one columns" style="text-align:center;">{{item['slots']}}</div>
+                <div class="three columns">&nbsp;</div>
+            </div>
+            % end
+            <div class="row">
+                <div class="two columns">&nbsp;</div>
+                <div class="six columns">&nbsp;</div>
+                <div class="one columns"><b>({{content['used_slots']}}/{{content['total_slots']}})</b></div>
+                <div class="three columns">&nbsp;</div>
+            </div>
+            <!-- Footnote -->
         </div>
     </body>
 </html>
