--- a/lawbreaker/web/templates/index.html
+++ b/lawbreaker/web/templates/index.html
@@ -20,16 +20,11 @@
             <!-- Basic details -->
             <div class="row">
                 <div class="two columns">&nbsp;</div>
-                <div class="eight columns"><b>Name:</b> {{content['name']}}</div>
-                <div class="two columns">&nbsp;</div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="two columns">&nbsp;</div>
-                <div class="two columns"><b>XP:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['xp']}}</div>
+                <div class="three columns"><b>Name:</b>&nbsp;&nbsp;&nbsp;&nbsp;{{content['name']}}</div>
+                <div class="one columns"><b>XP:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['xp']}}</div>
                 <div class="two columns" style="text-align:center;"><b>Level:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['level']}}</div>
-                <div class="two columns"><b>HP:&nbsp;&nbsp;&nbsp;&nbsp;</b> {{content['hit_points']}}</div>
-                <div class="four columns">&nbsp;</div>
+                <div class="two columns"><b>HP:&nbsp;&nbsp;&nbsp;&nbsp;</b> {{content['hit_points']}} / {{content['hit_points']}}</div>
+                <div class="two columns">&nbsp;</div>
             </div>
             <br>
             <!-- Traits -->
