--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,9 +16,16 @@
             <div class="row">
                 <div class="offset-by-two columns eight columns" style="text-align:center;"><b>A character generator for the Knave role playing game.</b></div>
             </div>
+            % if not defined('expiry'):
             <div class="row">
                 <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.9em;"><a href="{{content['id']}}">Permalink</a></div>
             </div>
+            % end
+            % if defined('expiry'):
+            <div class="row">
+                <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.7em;">(Expires 30 days after last access, on {{expiry}})</div>
+            </div>
+            % end
             <div class="row">
                 <div class="offset-by-one column ten columns"><hr></div>
             </div>
