scaling up fonts slightly

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     </head>
-    <body style="font-family: 'Crimson Text', serif !important;">
+    <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;">
         <div class="container">
             <!-- Title -->
             <div class="row">
