--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,26 +4,27 @@
         <link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="static/css/skeleton.css" />
 
+        <link rel="stylesheet" type="text/css" href="static/css/print.css" />
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;">
         <div class="container">
             <!-- Title -->
-            <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:3em;text-align:center;">Lawbreaker</div>
+            <div class="row" style="display:flex;align-items:center;">
+                <div class="offset-by-two eight columns" style="font-family:'Sebaldus-Gotisch';font-size:3em;text-align:center;">Lawbreaker</div>
             </div>
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="text-align:center;"><b>A character generator for the Knave role playing game.</b></div>
+                <div class="offset-by-two eight columns" style="text-align:center;"><b>A character generator for the Knave role playing game.</b></div>
             </div>
             % if not defined('permalinked'):
-            <div class="row">
-                <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.9em;"><a href="{{content['id']}}">Permalink</a></div>
+            <div class="row noprint">
+                <div class="offset-by-two eight columns" style="text-align:center;font-size:0.9em;"><a href="{{content['id']}}">Permalink</a></div>
             </div>
             % end
             % if defined('permalinked') and permalinked:
-            <div class="row">
-                <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.8em;">(This permalink expires after 30 days of inactivity)</div>
+            <div class="row noprint">
+                <div class="offset-by-two eight columns" style="text-align:center;font-size:0.8em;">(This permalink expires after 30 days of inactivity)</div>
             </div>
             % end
             <div class="row">
@@ -31,19 +32,19 @@
             </div>
             <!-- Basic details -->
             <div class="row">
-                <div class="offset-by-two columns one columns"><b>Name:</b></div>
+                <div class="offset-by-two one columns"><b>Name:</b></div>
                 <div class="two columns">{{content['name']}}</div>
-                <div class="one columns"><b>XP:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['xp']}}</div>
-                <div class="two columns" style="text-align:center;"><b>Level:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['level']}}</div>
-                <div class="two columns"><b>HP:&nbsp;&nbsp;&nbsp;&nbsp;</b> {{content['hit_points']}} / {{content['hit_points']}}</div>
+                <div class="one columns" ><b>XP:&nbsp;&nbsp;</b>{{content['xp']}}</div>
+                <div class="two columns" style="text-align:center;"><b>Level:&nbsp;&nbsp;</b>{{content['level']}}</div>
+                <div class="two columns" ><b>HP:&nbsp;&nbsp;</b> {{content['hit_points']}} / {{content['hit_points']}}</div>
             </div>
             <br>
             <!-- Traits -->
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Traits</div>
+                <div class="offset-by-two eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Traits</div>
             </div>
             <div class="row">
-                <div class="offset-by-two columns eight columns">
+                <div class="offset-by-two eight columns">
                     {{content['traits']['background'].title()}}.
                     Wears {{content['traits']['clothing']}} clothes, and has {{content['traits']['speech']}} speech.
                     Has
@@ -59,33 +60,33 @@
             <br>
             <!-- Attributes -->
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Attributes</div>
+                <div class="offset-by-two eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Attributes</div>
             </div>
             <div class="row">
-                <div class="offset-by-three columns two columns" style="text-align:center;"><b>Defense</b></div>
+                <div class="offset-by-three two columns" style="text-align:center;"><b>Defense</b></div>
                 <div class="two columns" style="text-align:center;"><b>Attribute</b></div>
                 <div class="two columns" style="text-align:center;"><b>Bonus</b></div>
             </div>
             % for (attribute, attribute_defense) in content["attributes"].iteritems():
             <div class="row">
-                <div class="offset-by-three columns two columns" style="text-align:center;">{{attribute_defense}}</div>
+                <div class="offset-by-three two columns" style="text-align:center;">{{attribute_defense}}</div>
                 <div class="two columns" style="text-align:center;">{{attribute.title()}}</div>
                 <div class="two columns" style="text-align:center;">{{attribute_defense - 10}}</div>
             </div>
             % end
             <br>
             <div class="row">
-                <div class="offset-by-three columns two columns" style="text-align:center;">{{content['armor_defense']}}</div>
+                <div class="offset-by-three two columns" style="text-align:center;">{{content['armor_defense']}}</div>
                 <div class="two columns" style="text-align:center;">Armor</div>
                 <div class="two columns" style="text-align:center;">{{content['armor_defense'] - 10}}</div>
             </div>
             <br>
             <!-- Inventory -->
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Inventory</div>
+                <div class="offset-by-two eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Inventory</div>
             </div>
             <div class="row">
-                <div class="offset-by-three columns five columns"><b>Name</b></div>
+                <div class="offset-by-two six columns"><b>Name</b></div>
                 <div class="one columns" style="text-align:center;"><b>Slots</b></div>
             </div>
             % for item in content["inventory"]:
@@ -118,7 +119,7 @@
             </div>
             % end
             <div class="row">
-                <div class="offset-by-eight columns one columns"><b>({{content['used_slots']}}/{{content['total_slots']}})</b></div>
+                <div class="offset-by-eight one columns"><b>({{content['used_slots']}}/{{content['total_slots']}})</b></div>
             </div>
             <!-- Footnote -->
             <br>
@@ -134,7 +135,7 @@
                 </div>
             </div>
             <!-- Blank line for legibility -->
-            <div class="row">&nbsp;</div>
+            <div class="row noprint">&nbsp;</div>
         </div>
     </body>
 </html>
