added branding to the bottom of the printed file

--- a/web/static/css/print.css
+++ b/web/static/css/print.css
@@ -9,7 +9,8 @@
 
   html {
     font-size: 38%;
-    margin: 5%;}
+    margin-top:10%;
+    margin-left: 10%;}
 
   .noprint {
       display: none !important;
