--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Lawbreaker: A Knave character generator</title>
         <link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
