minor html changes for better viewing

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -47,7 +47,7 @@
                 <div class="offset-by-two eight columns" style="font-family:'Sebaldus-Gotisch';font-size:1.9em;">Traits</div>
             </div>
             <div class="row">
-                <div class="offset-by-two eight columns">
+                <div class="offset-by-two eight columns" style="text-align:justify;">
                     {{content['traits']['background'].title()}}.
                     Wears {{content['traits']['clothing']}} clothes, and has {{content['traits']['speech']}} speech.
                     Has
@@ -138,13 +138,13 @@
             <br class="onlyprint">
             <div class="row">
                 <div class="twelve columns" style="text-align:center;">
-                    <i style="font-size:0.7em;">
+                    <span style="font-size:0.7em;">
                     <a href="https://github.com/hrangan/lawbreaker">Lawbreaker</a> by hrangan
                     ·
                     <a href="https://www.drivethrurpg.com/product/250888/Knave">Knave</a> by Questing Beast
                     ·
                     <a href="https://www.reddit.com/r/DnDBehindTheScreen/comments/50pcg1/a_post_about_names_names_for_speakers_of_the/">Random names</a> courtesy OrkishBlade
-                    </i>
+                    </span>
                 </div>
             </div>
             <!-- Blank line for legibility -->
