added target blank for maintenance page (more)
Heroku requires target="_blank" on maintenance and error pages for
security reasons

--- a/web/templates/maintenance.html
+++ b/web/templates/maintenance.html
@@ -22,15 +22,15 @@
                     Lawbreaker.
                     <br>
                     <br>
-                    Visit <a href="https://lawbreaker.herokuapp.com/">Lawbreaker</a> to generate a character sheet for the Knave role playing game.
+                    Visit <a href="https://lawbreaker.herokuapp.com/" target="_blank">Lawbreaker</a> to generate a character sheet for the Knave role playing game.
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="twelve columns" style="text-align:center;">
-                    <a href="https://github.com/hrangan/lawbreaker">Lawbreaker</a> by hrangan
+                    <a href="https://github.com/hrangan/lawbreaker" target="_blank">Lawbreaker</a> by hrangan
                     ·
-                    <a href="https://www.drivethrurpg.com/product/250888/Knave">Knave</a> by Questing Beast
+                    <a href="https://www.drivethrurpg.com/product/250888/Knave" target="_blank">Knave</a> by Questing Beast
                 </div>
             </div>
         </div>
