references open in a new tab

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -133,17 +133,17 @@
                 <div class="offset-by-two eight columns" style="text-align:center;"><b>A character generator for the Knave role playing game.</b></div>
             </div>
             <div class="row onlyprint">
-                <div class="offset-by-two eight columns" style="text-align:center;">lawbreaker.herokuapp.com</div>
+                <div class="offset-by-two eight columns" style="text-align:center;">https://lawbreaker.herokuapp.com</div>
             </div>
             <br class="onlyprint">
             <div class="row">
                 <div class="twelve columns" style="text-align:center;">
                     <span style="font-size:0.7em;">
-                    <a href="https://github.com/hrangan/lawbreaker">Lawbreaker</a> by hrangan
+                    <a target="github" href="https://github.com/hrangan/lawbreaker">Lawbreaker</a> by hrangan
                     ·
-                    <a href="https://www.drivethrurpg.com/product/250888/Knave">Knave</a> by Questing Beast
+                    <a target="knave" href="https://www.drivethrurpg.com/product/250888/Knave">Knave</a> by Questing Beast
                     ·
-                    <a href="https://www.reddit.com/r/DnDBehindTheScreen/comments/50pcg1/a_post_about_names_names_for_speakers_of_the/">Random names</a> courtesy OrkishBlade
+                    <a target="orkishblade" href="https://www.reddit.com/r/DnDBehindTheScreen/comments/50pcg1/a_post_about_names_names_for_speakers_of_the/">Random names</a> courtesy OrkishBlade
                     </span>
                 </div>
             </div>
