added thumbnail for scraping

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,6 +11,7 @@
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;">
         <div class="container">
+            <img src="static/thumbnail.png" style="display: none;">
             <!-- Title -->
             <div class="row noprint" style="display:flex;align-items:center;">
                 <div class="offset-by-two eight columns" style="font-family:'Sebaldus-Gotisch';font-size:3em;text-align:center;">Lawbreaker</div>
