fixed thumbnail for the reddit mobile app

--- a/web/templates/error404.html
+++ b/web/templates/error404.html
@@ -9,6 +9,9 @@
     </head>
     <body style="margin:100px;font-family: 'Crimson Text', serif !important;">
         <div class="container">
+            <!-- Thumbnail -->
+            <img src="static/thumbnail.png" style="display: none;">
+            <!-- 404 Error Message -->
             <div class="row">
                 <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:5em;text-align:center;">404</div>
             </div>
