--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,6 +16,7 @@
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;">
         <div class="container">
+            <!-- Thumbnail -->
             <img src="static/thumbnail.png" style="display: none;">
             <!-- Title -->
             <div class="row noprint" style="display:flex;align-items:center;">
