--- a/web/templates/error404.html
+++ b/web/templates/error404.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Lawbreaker: A Knave character generator</title>
-        <link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="static/css/skeleton.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/normalize.min.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/skeleton.min.css" />
 
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
