--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,8 +7,8 @@
         % if defined('permalink') and permalink:
             <title>Lawbreaker: {{content['name']}}</title>
         % end
-        <link rel="stylesheet" type="text/css" href="static/css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="static/css/skeleton.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/normalize.min.css" />
+        <link rel="stylesheet" type="text/css" href="static/css/skeleton.min.css" />
 
         <link rel="stylesheet" type="text/css" href="static/css/print.css" />
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
