--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,16 +2,28 @@
 <html lang="en">
     <head>
         % if (not defined('permalink')) or (defined('permalink') and not permalink):
-            <title>Lawbreaker: A Knave character generator</title>
+        <title>Lawbreaker: A Knave character generator</title>
+
+        <meta property="og:title" content="Lawbreaker: A Knave character generator" />
+        <meta property="og:url" content="https://lawbreaker.herokuapp.com/" />
         % end
         % if defined('permalink') and permalink:
-            <title>Lawbreaker: {{content['name']}}</title>
+        <title>Lawbreaker: {{content['name']}}</title>
+
+        <meta property="og:title" content="Lawbreaker: {{content['name']}}" />
+        <meta property="og:url" content="https://lawbreaker.herokuapp.com/{{content['id']}}" />
         % end
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://lawbreaker.herokuapp.com/static/thumbnail.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="370" />
+        <meta property="og:image:height" content="353" />
+
         <link rel="stylesheet" type="text/css" href="static/css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="static/css/skeleton.min.css" />
-
         <link rel="stylesheet" type="text/css" href="static/css/print.css" />
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
+
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;">
