--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" type="text/css" href="static/css/print.css" />
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
 
+        <link rel="preload" href="/static/css/Sebaldus-Gotisch.woff" as="font">
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;">
