--- a/web/templates/error404.html
+++ b/web/templates/error404.html
@@ -1,22 +1,31 @@
 <html>
     <head>
         <title>Lawbreaker: A Knave character generator</title>
+
+        <meta property="og:title" content="Lawbreaker: A Knave character generator" />
+        <meta property="og:url" content="https://lawbreaker.herokuapp.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://lawbreaker.herokuapp.com/static/thumbnail.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="370" />
+        <meta property="og:image:height" content="370" />
+
         <link rel="stylesheet" type="text/css" href="static/css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="static/css/skeleton.min.css" />
-
+        <link rel="stylesheet" type="text/css" href="static/css/print.css" />
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
+
+        <link rel="preload" href="/static/css/Sebaldus-Gotisch.woff" as="font">
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     </head>
     <body style="margin:100px;font-family: 'Crimson Text', serif !important;">
         <div class="container">
-            <!-- Thumbnail -->
-            <img src="static/thumbnail.png" style="display: none;">
             <!-- 404 Error Message -->
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-family:'Sebaldus-Gotisch';font-size:5em;text-align:center;">404</div>
+                <div class="twelve columns" style="font-family:'Sebaldus-Gotisch';font-size:5em;text-align:center;">404</div>
             </div>
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="font-size:2em;text-align:center;">Character not found</div>
+                <div class="twelve columns" style="font-size:2em;text-align:center;">Character not found</div>
             </div>
         </div>
     </body>
