--- a/web/templates/error404.html
+++ b/web/templates/error404.html
@@ -5,7 +5,7 @@
         <meta property="og:title" content="Lawbreaker: A Knave character generator" />
         <meta property="og:url" content="https://lawbreaker.herokuapp.com/" />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="https://lawbreaker.herokuapp.com/static/thumbnail.png" />
+        <meta property="og:image" content="https://lawbreaker.herokuapp.com/static/images/thumbnail.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="370" />
         <meta property="og:image:height" content="370" />
