fixed preloading and header spacing

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,13 +19,14 @@
         <meta property="og:image:width" content="370" />
         <meta property="og:image:height" content="370" />
 
+        <link rel="preload" href="static/css/font.css" as="style">
+        <link rel="preload" href="static/images/Konrad_I_Mazowiecki.jpg" as="image">
+
         <link rel="stylesheet" type="text/css" href="static/css/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="static/css/skeleton.min.css" />
         <link rel="stylesheet" type="text/css" href="static/css/print.css" />
         <link rel="stylesheet" type="text/css" href="static/css/font.css" />
-
-        <link rel="preload" href="/static/css/Sebaldus-Gotisch.woff" as="font">
-        <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crimson+Text">
     </head>
     <body style="font-family: 'Crimson Text', serif !important;font-size:1.8em;margin-top:10px;">
         <div class="container">
@@ -36,7 +37,7 @@
                          src="static/images/Konrad_I_Mazowiecki.jpg"
                          style="max-width:150%;max-height:150%;">
                 </div>
-                <div class="six columns">
+                <div class="six columns" style="margin-left:6.66666% !important;">
                     <div class="rownoprint" style="display:flex;align-items:center;">
                         <div class="twelve columns" style="font-family:'Sebaldus-Gotisch';font-size:3em;text-align:center;">
                             Lawbreaker
