removed unused style element

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -35,7 +35,7 @@
                 <div class="offset-by-two two columns">
                     <img alt="Konrad I Mazowiecki"
                          src="static/images/Konrad_I_Mazowiecki.jpg"
-                         style="max-width:150%;max-height:150%;">
+                         style="max-width:150%;">
                 </div>
                 <div class="six columns" style="margin-left:6.66666% !important;">
                     <div class="rownoprint" style="display:flex;align-items:center;">
